Fix mobile layout issue

--- a/projects/blog.html
+++ b/projects/blog.html
@@ -47,8 +47,8 @@
 
             <ul>
               <li><strong>My Portfolio</strong>:  Bootstrap, HTML, CSS,Java script</li>
-                <li><strong>Website URL</strong>: <a href="https://pavangoudchinthala.github.io/My_Portfolio/#portfolio" target="_blank">Link</a></li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/pavangoudchinthala/My_Portfolio.git" target="_blank">Project Link</a></li>
+                <li><strong>Website URL</strong>: <a href="https://pavangoudchinthala.github.io/" target="_blank">Link</a></li>
+              <li><strong>Github URL</strong>: <a href="https://github.com/pavangoudchinthala/" target="_blank">Project Link</a></li>
             </ul>
 
             <p>
