mail icon change

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="social-links">
           <a href="https://www.linkedin.com/in/pavangoudchinthala" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://www.github.com/pavangoudchinthala" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="mailto:pavangoud2801@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+          <a href="mailto:pavangoud2801@gmail.com" target="_blank" class="google"><i class="bx bx-envelope"></i></a>
           <a href="https://www.youtube.com/@pavanchinthala2801" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
           <a href="https://www.instagram.com/pavangoudchinthala" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
 
@@ -467,7 +467,7 @@
             <h3>Social Profiles</h3>
             <div class="social-links">
               <a href="https://www.linkedin.com/in/pavangoudchinthala" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              <a href="mailto:pavangoud2801@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+              <a href="mailto:pavangoud2801@gmail.com" target="_blank" class="google"><i class="bx bx-envelope"></i></a>
               <a href="https://www.youtube.com/@pavangoud2801" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
               <a href="https://www.instagram.com/pavangoudchinthala/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
 
