--- a/index.html
+++ b/index.html
@@ -320,6 +320,24 @@
         </div>
       </div>
 
+      <!-- Project 3 -->
+      <div class="project-card">
+        <h3>Mouth Disease Classification</h3>
+        <p>AI-based oral disease detection using CNN and EfficientNet.</p>
+
+        <a href="https://mouthdiseaseprediction.streamlit.app"
+          target="_blank"
+          class="btn btn-primary">
+          Live Demo
+        </a>
+
+        <a href="https://github.com/pavangoudchinthala/Multiclass_Mouth_Disease_Classification"
+          target="_blank"
+          class="btn btn-secondary">
+          Source Code
+        </a>
+      </div>
+
     </div>
   </div>
 </section>
