Updated portfolio projects section with descriptions and tech stack

--- a/projects/blog.html
+++ b/projects/blog.html
@@ -46,17 +46,31 @@
             <h2 style="color:#12d640">My Portfolio</h2>
 
             <ul>
-              <li><strong>My Portfolio</strong>:  Bootstrap, HTML, CSS,Java script</li>
+              <li><strong>Tech Stack</strong>:  HTML, CSS, Bootstrap, JavaScript, jQuery, Typed.js, GitHub Pages</li>
                 <li><strong>Website URL</strong>: <a href="https://pavangoudchinthala.github.io/" target="_blank">Link</a></li>
               <li><strong>Github URL</strong>: <a href="https://github.com/pavangoudchinthala/" target="_blank">Project Link</a></li>
             </ul>
 
             <p>
-               The website is created using  HTML, CSS,Java script. I have used bootstrap for the frontend part. 
+            Designed and developed a responsive personal portfolio website to showcase my skills, projects, 
+            education, and achievements in a structured and visually appealing manner. The portfolio serves 
+            as a central platform to present my work in <strong>Artificial Intelligence, Machine Learning, 
+            and Web Development</strong>.
             </p>
-              <p>
-                This website is for sharing my portfoilo in a smart way, it definetly impressive and creative way for sharing your profile.
+
+            <p>
+            The website features interactive project cards with live demos and GitHub links, smooth navigation, 
+            and a modern UI design optimized for both desktop and mobile devices. It integrates external 
+            projects such as deployed Streamlit applications and provides quick access to my resume and 
+            social profiles.
             </p>
+
+            <p>
+            This portfolio demonstrates my ability to combine <strong>frontend development</strong> with 
+            <strong>real-world project deployment</strong>, reflecting my focus on clean design, usability, 
+            and professional presentation.
+            </p>
+
           </div>
 
         </div>
