--- a/index.html
+++ b/index.html
@@ -287,56 +287,122 @@
       <!-- Project 1 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
         <div class="portfolio-wrap">
-          <img src="assets/img/project/missing_child_logo.png" class="img-fluid" alt="">
+          <img src="assets/img/project/missing_child_logo.png"
+              class="img-fluid"
+              alt="Missing Child Identification System">
+
           <div class="portfolio-info">
             <h4>Missing Child Identification System</h4>
+
+            <!-- Info icon (details page) -->
             <div class="portfolio-links">
               <a href="projects/missing_child_identification_system.html"
-                 class="venobox"
-                 data-vbtype="iframe"
-                 title="Project Details">
+                class="venobox"
+                data-vbtype="iframe"
+                title="Project Details">
                 <i class="bx bx-info-circle"></i>
               </a>
             </div>
+
+            <!-- 🔥 BUTTONS (same as Project 2) -->
+            <div class="portfolio-buttons">
+              <!-- Live Demo -->
+              <a href="https://your-streamlit-link-here.streamlit.app"
+                target="_blank"
+                class="btn btn-primary">
+                Live Demo
+              </a>
+
+              <!-- GitHub -->
+              <a href="https://github.com/pavangoudchinthala/Your_Missing_Child_Project_Repo"
+                target="_blank"
+                class="btn btn-secondary">
+                GitHub
+              </a>
+            </div>
+
           </div>
         </div>
       </div>
 
-      <!-- Project 2 -->
+
+            <!-- Project 2 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
         <div class="portfolio-wrap">
-          <img src="assets/img/project/blog.jpg" class="img-fluid" alt="">
+          <img src="assets/img/project/blog.jpg"
+              class="img-fluid"
+              alt="My Portfolio">
+
           <div class="portfolio-info">
             <h4>My Portfolio</h4>
+
+            <!-- Info icon -->
             <div class="portfolio-links">
               <a href="projects/blog.html"
-                 class="venobox"
-                 data-vbtype="iframe"
-                 title="Project Details">
+                class="venobox"
+                data-vbtype="iframe"
+                title="Project Details">
                 <i class="bx bx-info-circle"></i>
+              </a>
+            </div>
+
+            <!-- Buttons -->
+            <div class="portfolio-buttons">
+              <a href="https://pavangoudchinthala.github.io"
+                target="_blank"
+                class="btn btn-primary">
+                Live Demo
+              </a>
+
+              <a href="https://github.com/pavangoudchinthala/pavangoudchinthala.github.io"
+                target="_blank"
+                class="btn btn-secondary">
+                GitHub
               </a>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- Project 3 -->
-      <div class="project-card">
-        <h3>Mouth Disease Classification</h3>
-        <p>AI-based oral disease detection using CNN and EfficientNet.</p>
 
-        <a href="https://mouthdiseaseprediction.streamlit.app"
-          target="_blank"
-          class="btn btn-primary">
-          Live Demo
-        </a>
+            <!-- Project 3 -->
+      <div class="col-lg-4 col-md-6 portfolio-item">
+        <div class="portfolio-wrap">
+          <img src="assets/img/project/Mouth_Disease.jpg"
+              class="img-fluid"
+              alt="Mouth Disease Detection">
 
-        <a href="https://github.com/pavangoudchinthala/Multiclass_Mouth_Disease_Classification"
-          target="_blank"
-          class="btn btn-secondary">
-          Source Code
-        </a>
+          <div class="portfolio-info">
+            <h4>Mouth Disease Detection</h4>
+
+            <!-- Info icon -->
+            <div class="portfolio-links">
+              <a href="projects\mouth_disease.html"
+                class="venobox"
+                data-vbtype="iframe"
+                title="Project Details">
+                <i class="bx bx-info-circle"></i>
+              </a>
+            </div>
+
+            <!-- Buttons -->
+            <div class="portfolio-buttons">
+              <a href="https://mouthdiseaseprediction.streamlit.app"
+                target="_blank"
+                class="btn btn-primary">
+                Live Demo
+              </a>
+
+              <a href="https://github.com/pavangoudchinthala/Multiclass_Mouth_Disease_Classification"
+                target="_blank"
+                class="btn btn-secondary">
+                GitHub
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
+
 
     </div>
   </div>
